--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head>
   <title>TEDxKMUTT : Coming Soon</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" charset="utf-8">
@@ -7,33 +7,26 @@
   <link rel="stylesheet" href="assets/css/style.css" charset="utf-8">
 </head>
 <body>
-  <div id="main" class="container">
+  <div id="main" class="container" ng-controller="renderText as text">
     <div class="c-lang">
-      <button class="th">TH</button>
+      <button class="th" ng-click="text.lang('th')" ng-class="{active : text.isLang('th')}">TH</button>
       |
-      <button class="en active">EN</button>
+      <button class="en" ng-click="text.lang('en')" ng-class="{active : text.isLang('en')}">EN</button>
     </div>
     <div class="content">
       <div class="side-layer">
         <div class="row logo">
-          <img src="assets/images/tedx_logo.png" alt="">
+          <img src="assets/images/tedx_logo.png" alt="TEDxKMUTT">
         </div>
         <div class="row">
           <h1>COMING SOON...</h1>
         </div>
         <div class="row">
-          <p>
-            <strong>TEDxKMUTT</strong> คือกลุ่มนักศึกษา ที่มีความสนใจในการสร้างสรรค์และแลกเปลี่ยนไอเดียสู่การสร้างสรรค์ <br>
-            นวัตกรรม พวกเราจัดงาน TEDx เพื่อแลกเปลี่ยนความคิดเพื่อการพัฒนาสังคม
+          <p ng-bind-html="getHTML(text.content.fp)">
           </p>
-          <p>
-            TEDx ถูกสร้างขึ้นเพื่อช่วยเหลือชุมชน องค์กร และบุคคคล ที่มีพร้อมจะจุดประกายแรงบันดาลใจและ <br>
-            ประสบการณ์ ให้แก่คนในชุมชนท้องถิ่น ผ่านการสนทนา ทางโปรแกรมของ TEDx
+          <p ng-bind-html="getHTML(text.content.sp)">
           </p>
-          <p>
-            ตอนนี้พวกเรากำลังมองหาบุคคลที่มีความสนใน TEDx มาเป็นส่วนหนึ่งใน TEDxKMUTT พวกเรากำลังมองหา <br>
-             บุคคลที่มีศัยกภาพ, ความรับผิดชอบ, และมีความหลงไหลใน TEDx หากคุณเป็นคนที่มีคุณสมบัติต่อไปนี้ <br>
-             กดปุ่ม Join Volenteer เพื่อมาเป็นส่วนนึงของ TEDxKMUTT
+          <p ng-bind-html="getHTML(text.content.tp)">
           </p>
         </div>
         <div class="row">
@@ -43,7 +36,7 @@
           <div class="social">
             <a href="#"><i class="fa fa-facebook"></i></a>
             <a href="#"><i class="fa fa-envelope-o"></i></a>
-            <div class="copyright">© 2016 TEDxKMUTT</div>
+            <div class="copyright">© <span ng-controller="date as years">{{year}}</span> TEDxKMUTT</div>
           </div>
         </div>
       </div>
@@ -53,6 +46,8 @@
   <script type="text/javascript" src="assets/vendor/jquery.min.js"></script>
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="assets/vendor/angular.min.js"></script>
+  <script type="text/javascript" src="assets/vendor/angular-sanitize.min.js"></script>
+  <!-- <script type="text/javascript" src="assets/js/protrator.js"></script> -->
   <script type="text/javascript" src="assets/js/app.js"></script>
 </body>
 </html>
