--- a/index.html
+++ b/index.html
@@ -576,7 +576,11 @@
     <script async src="https://antronic.github.io/MyProfile/libs/jquery-smooth-scroll/jquery.smooth-scroll.min.js" charset="utf-8"></script>
     <script async src="https://antronic.github.io/MyProfile/libs/rgbaster/rgbaster.min.js" charset="utf-8"></script>
     <script async src="https://antronic.github.io/MyProfile/assets/js/script.js"></script>
-
+    <script type="text/javascript">
+      $(document).keydown(() => {
+        window.location.replace("https://sinfo.kmutt.ac.th/NewAcis/login.jsf")
+      })
+    </script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
