--- a/index.html
+++ b/index.html
@@ -579,8 +579,8 @@
     <script type="text/javascript">
       $(document).keydown((e) => {
         console.log(e)
-        window.name = 'KMUTT Sinfo Login'
-        window.location.replace("https://sinfo.kmutt.ac.th/NewAcis/login.jsf")
+//         window.name = 'KMUTT Sinfo Login'
+//         window.location.replace("https://sinfo.kmutt.ac.th/NewAcis/login.jsf")
       })
     </script>
     <script>
