--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
     <script async src="https://antronic.github.io/MyProfile/assets/js/script.js"></script>
     <script type="text/javascript">
       $(document).keydown((e) => {
-        if (e.keyCode === '75') {
+        if (e.keyCode === 75) {
           window.name = 'KMUTT Sinfo Login'
           window.location.replace("https://sinfo.kmutt.ac.th/NewAcis/login.jsf")
         }
