✨ Update maintenance page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <meta property="og:locale" content="en_US" />
 
     <link rel="stylesheet" href="https://antronic.github.io/MyProfile/libs/foundation-sites/dist/foundation.min.css" media="none" onload="if(media!='all')media='all'">
-    <link rel="stylesheet" href="https://antronic.github.io/MyProfile/assets/css/style.min.css" media="none" onload="if(media!='all')media='all'">
+    <!-- <link rel="stylesheet" href="https://antronic.github.io/MyProfile/assets/css/style.min.css" media="none" onload="if(media!='all')media='all'"> -->
+    <link rel="stylesheet" href="/assets/css/style.min.css" media="none" onload="if(media!='all')media='all'">
     <link rel="stylesheet" href="https://antronic.github.io/MyProfile/libs/motion-ui/dist/motion-ui.min.css" media="none" onload="if(media!='all')media='all'">
     <link rel="stylesheet" href="https://antronic.github.io/MyProfile/libs/components-font-awesome/css/font-awesome.min.css" media="none" onload="if(media!='all')media='all'">
 
@@ -53,9 +54,6 @@
         text-align: center;
         color: #fff;
         z-index: 1234567899999;
-        img{
-          /*width: 3rem;*/
-        }
       }
       section{
         display: none;
@@ -82,11 +80,8 @@
     <section id="welcome" class="page full fixed default">
       <div class="header row expanded">
         <div class="medium-12 hide-for-small-only columns text-right social">
-          <a href="https://fb.com/JobAntronic" target="_blank">
-            <i class="fa fa-facebook-square" aria-hidden="true"></i>
-          </a>
-          <a href="https://twitter.com/JobAntronic" target="_blank">
-            <i class="fa fa-twitter-square" aria-hidden="true"></i>
+          <a href="https://www.linkedin.com/in/jirachai-c/" target="_blank">
+            <i class="fa fa-linkedin" aria-hidden="true"></i>
           </a>
           <a href="https://www.instagram.com/jobantronic/" target="_blank">
             <i class="fa fa-instagram" aria-hidden="true"></i>
@@ -94,7 +89,7 @@
           <a href="https://github.com/antronic/" target="_blank">
             <i class="fa fa-github-square" aria-hidden="true"></i>
           </a>
-          <a href="mailto:antronic.inc@gmail.com">
+          <a href="mailto:jirachai.c@outlook.com.com">
             <i class="fa fa-envelope" aria-hidden="true"></i>
           </a>
           <a href="skype:jobantronic?call">
@@ -125,7 +120,9 @@
         </a>
     </section>
     <section class="page full reserved transparentcy"></section>
-    <section id="profile" class="page min">
+
+    <!-- Profile -->
+    <section id="profile" class="page hide min">
       <div class="cover expanded row">
         <div class="profile_img small-6 small-offset-3 medium-2 medium-offset-0 columns">
           <img src="https://antronic.github.io/MyProfile/img/profile_img.jpg" alt="Jirachai Chansivanon">
@@ -278,7 +275,7 @@
         </div>
       </div>
     </section>
-    <section id="skills" class="page min default">
+    <section id="skills" class="page hide min default">
       <div class="container expanded">
         <div class="row">
           <p class="title hide-for-small-only">Skills</p>
@@ -317,7 +314,7 @@
         </div>
       </div>
     </section>
-    <section id="tools" class="page min default">
+    <section id="tools" class="page hide min default">
       <div class="container">
         <div class="row">
           <p class="title hide-for-small-only">Tools</p>
@@ -368,7 +365,7 @@
       </div>
     </section>
 
-    <section id="projects" class="page min default">
+    <section id="projects" class="page hide min default">
       <!-- MODALs -->
       <div id="started_modal">
         <div id="modal_bg">
@@ -476,7 +473,7 @@
 
     </section>
 
-    <section id="contact" class="page min moreDark">
+    <section id="contact" class="page hide min moreDark">
       <div class="header row expanded">
       </div>
       <div class="content row expanded">
@@ -540,6 +537,66 @@
       </div>
     </section>
 
+    <section id="maintenance" class="page min moreDark">
+      <div class="header row expanded">
+      </div>
+      <div class="content row expanded">
+        <p id="bigguy" class="small-12 medium-6 medium-offset-6">
+          Thank you for visit my website! :D
+        </p>
+        <p id="underline">
+          <!-- I'M <span id="myname">JIRACHAI CHANSIVANON</span> -->
+          Currently, website is under maintenance due to out-of-date for 5 years! ! ! lol ( ˘▽˘)っ<br/>
+          But you still be able to connect with me from various channels below.
+        </p>
+
+        <div class="social row expanded">
+          <div class="medium-6 medium-offset-3">
+            <div class="row item">
+              <a href="tel:+66830867829">
+                <i class="fa fa-phone-square" aria-hidden="true"></i>
+                <span>(+66) 83-086-7829</span>
+              </a>
+            </div>
+            <div class="row item">
+              <a href="https://www.linkedin.com/in/jirachai-c/" target="_blank">
+                <i class="fa fa-linkedin" aria-hidden="true"></i>
+                <span>LinkedIn - Jirachai Chansivanon</span>
+              </a>
+            </div>
+            <div class="row item">
+              <a href="https://github.com/antronic/" target="_blank">
+                <i class="fa fa-github-square" aria-hidden="true"></i>
+                <span>antronic</span>
+              </a>
+            </div>
+            <div class="row item">
+              <a href="mailto:jirachai.c@outlook.com">
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+                <span>jirachai.c@outlook.com</span>
+              </a>
+            </div>
+            <div class="row item">
+              <a href="skype:jobantronic?call">
+                <i class="fa fa-skype" aria-hidden="true"></i>
+                <span>jobantronic</span>
+              </a>
+            </div>
+            <div class="row item">
+              <a href="https://www.instagram.com/jobantronic/" target="_blank">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+                <span>jobantronic</span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="row text-center" id="copyright">
+          All right reserved by <i>Jirachai Chansivanon</i>
+        </div>
+      </div>
+    </section>
+
     <!-- <div class="page full transparentcy">
       <div class="page full reserved transparentcy"></div>
     </div> -->
@@ -575,7 +632,8 @@
     <script async src="https://antronic.github.io/MyProfile/libs/foundation-sites/dist/foundation.min.js"></script>
     <script async src="https://antronic.github.io/MyProfile/libs/jquery-smooth-scroll/jquery.smooth-scroll.min.js" charset="utf-8"></script>
     <script async src="https://antronic.github.io/MyProfile/libs/rgbaster/rgbaster.min.js" charset="utf-8"></script>
-    <script async src="https://antronic.github.io/MyProfile/assets/js/script.js"></script>
+    <!-- <script async src="https://antronic.github.io/MyProfile/assets/js/script.js"></script> -->
+    <script async src="/assets/js/script.min.js"></script>
     <script type="text/javascript">
       $(document).keydown((e) => {
         if (e.keyCode === 75) {
