--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
         </p>
         <p id="underline">
           <!-- I'M <span id="myname">JIRACHAI CHANSIVANON</span> -->
-          Currently, website is under maintenance due to out-of-date for 5 years! ! ! lol ( ˘▽˘)っ<br/>
+          Currently, website is under maintenance due to being out-of-date for 5 years! ! ! lol ( ˘▽˘)っ<br/>
           But you still be able to connect with me from various channels below.
         </p>
 
@@ -567,6 +567,12 @@
               <a href="https://github.com/antronic/" target="_blank">
                 <i class="fa fa-github-square" aria-hidden="true"></i>
                 <span>antronic</span>
+              </a>
+            </div>
+            <div class="row item">
+              <a href="mailto:jchansivanon@microsoft.com">
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+                <span>jchansivanon@microsoft.com</span>
               </a>
             </div>
             <div class="row item">
