--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <a href="https://github.com/antronic/" target="_blank">
             <i class="fa fa-github-square" aria-hidden="true"></i>
           </a>
-          <a href="mailto:jirachai.c@outlook.com.com">
+          <a href="mailto:jchansivanon@microsoft.com">
             <i class="fa fa-envelope" aria-hidden="true"></i>
           </a>
           <a href="skype:jobantronic?call">
